# norwood-ai

./: .env.example  .gitignore  Makefile  PLAN_certification.md  README.md  STRIPE_INTEGRATION_PLAN.md  VISION.md  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  pyproject.toml
app/: celery_worker.py  config.py  db.py  main.py  schemas.py
app/assets/: __init__.py
app/llm/: __init__.py  client.py  executor.py
app/models/: __init__.py  analysis.py  base.py  certification.py  cock.py  counseling.py  forum.py  game2048.py  payment.py  user.py
app/routers/: __init__.py  auth.py  certification.py  cock.py  counseling.py  forum.py  game2048.py  leaderboard.py  payments.py
app/services/: __init__.py  analysis.py  certification.py  cock.py  counseling.py  images.py  leaderboard.py  pdf.py  s3.py  (+2 more)
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py  schemas.py
deploy/: QUICK_START.md  README.md  nginx.conf  norwood-ai.service  norwood-celery.service  setup-https.sh  setup-services.sh
docs/: BACKEND.md  FRONTEND.md  PLAN_twitter_bot.md
frontend/: index.html  package-lock.json  package.json
migrations/: 001_20241204_create_users.sql  002_20241204_create_analyses.sql  003_20241204_create_payments.sql  004_20241204_add_is_admin.sql  2024_12_16_1_create_forum.sql  2024_12_16_2_create_forum_personas.sql  2024_12_4_1_create_users.sql  2024_12_4_2_create_analyses.sql  2024_12_4_3_create_payments.sql  2024_12_5_1_create_counseling.sql  2024_12_6_1_create_certifications.sql  2024_12_6_2_add_payment_type.sql  2024_12_6_3_create_cock_certifications.sql  2024_12_8_1_create_game_2048_scores.sql  2024_12_8_2_add_adult_content_enabled.sql
scripts/: test_db_connection.py
tests/: test_s3.py  test_secrets_live.py
(+50 files in other folders)
