[project]
name = "norwood-ai"
version = "0.1.0"
description = "Norwood scale classification API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "anthropic>=0.39.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "celery[redis]>=5.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
